name:                latexpad
version:             0.1.0.0
synopsis:            LaTeX Scratchpad with save functionality.
description:         Please see README.md
homepage:            https://github.com/alvare/latexpad#readme
license:             BSD3
license-file:        LICENSE
author:              Ezequiel Alvarez
maintainer:          welcometothechango@gmail.com
copyright:           2016 Ezequiel Alvarez
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Store
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , acid-state
                     , bytestring
                     , containers
                     , cryptohash
                     , mtl
                     , safecopy
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable latexpad-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , latexpad
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alvare/latexpad
