name:                latexpad
version:             0.2.0.0
synopsis:            LaTeX Scratchpad with save functionality.
description:         Please see README.md
homepage:            https://github.com/alvare/latexpad#readme
license:             BSD3
license-file:        LICENSE
author:              Ezequiel Alvarez
maintainer:          welcometothechango@gmail.com
copyright:           2016 Ezequiel Alvarez
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API, App, Store, Types
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , acid-state
                     , bytestring
                     , containers
                     , cryptohash
                     , mtl
                     , safecopy
                     , servant-server
                     , text
                     , transformers
  default-language:    Haskell2010

executable latexpad-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wai-extra
                     , warp
                     , latexpad
  default-language:    Haskell2010

executable latexpad-swagger
  hs-source-dirs:      app
  main-is:             Swagger.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , neat-interpolation
                     , servant-swagger
                     , swagger2
                     , text
                     , latexpad
  default-language:    Haskell2010

executable latexpad-mock
  hs-source-dirs:      app
  main-is:             Mock.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , QuickCheck
                     , servant
                     , servant-server
                     , servant-mock
                     , text
                     , warp
                     , latexpad
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alvare/latexpad
